--- a/www/css/style.css
+++ b/www/css/style.css
@@ -37,7 +37,7 @@ button {
   padding: 1rem;
   height: 75vh;
   overflow-y: scroll;
-  /* border: 1px solid lightgray; */
+  border: 1px solid lightgray;
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
 
