--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,12 +1,13 @@
+av-writer,
 av-transcript {
   display: grid;
-  grid-template-columns: auto 1fr;
+  /* grid-template-columns: auto 1fr; */
   gap: 1rem;
 }
 
 video {
   display: block;
-  width: 500px;
+  width: 300px;
   height: auto;
 }
 
@@ -35,7 +36,7 @@ button {
 
 .transcript-wrapper {
   padding: 1rem;
-  height: 75vh;
+  height: 300px;
   overflow-y: scroll;
   border: 1px solid lightgray;
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
@@ -53,13 +54,18 @@ button {
   display: none;
 }
 
+.cue-play-button::after {
+  content: "▶";
+}
+
 .is-playing {
-  .cue-play-button {
-    display: none;
+  .cue-play-button::after {
+    content: "⏸";
+    /* display: none; */
   }
 
   .cue-pause-button {
-    display: inline-block;
+    display: none;
   }
 }
 
