--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -1,1 +1,70 @@
-@import "base.css";
+:root {
+  font-family:
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    "Open Sans",
+    "Helvetica Neue",
+    sans-serif;
+  color: #333;
+}
+
+body {
+  margin: 0;
+}
+
+.container {
+  margin: 0 auto;
+  max-width: 1200px;
+  padding: 0 1em;
+}
+
+nav {
+  background-color: #171e3d;
+
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+
+    display: flex;
+    justify-content: center;
+  }
+
+  a {
+    color: white;
+    padding: 0.75em 2em;
+    text-decoration: none;
+    display: block;
+
+    &:hover {
+      background: whitesmoke;
+      color: #171e3d;
+    }
+  }
+}
+
+.media-wrapper {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 1rem;
+  margin-top: 2rem;
+
+  figure {
+    margin: 0;
+
+    border: 1px solid #ccc;
+    padding: 1rem;
+    border-radius: 4px;
+    text-align: center;
+  }
+
+  figcaption {
+    margin-top: 0.5rem;
+  }
+}
