--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -92,3 +92,19 @@ details summary {
 details summary:hover {
   cursor: pointer;
 }
+
+.info {
+  padding: 1rem;
+  text-align: center;
+  border-radius: 4px;
+  margin-top: 1rem;
+
+  &.info--warning {
+    background-color: #c83e57;
+    border: 1px solid whitesmoke;
+    color: whitesmoke;
+    box-shadow:
+      0 0 10px 0 rgba(0, 0, 0, 0.25),
+      0 0 5px 0 rgba(0, 0, 0, 0.125);
+  }
+}
