--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -1,3 +1,4 @@
+/* General Layout and Shell Styles */
 :root {
   font-family:
     system-ui,
@@ -49,6 +50,8 @@ nav {
   }
 }
 
+/* Index page media list display styles */
+
 .media-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -87,4 +90,14 @@ nav {
       color: white;
     }
   }
+}
+
+/* Editor page styles */
+
+.media-wrapper {
+  display: grid;
+  grid-template-columns: 250px 1fr;
+  gap: 1rem;
+  margin-block-end: 1rem;
+  background-color: #444;
 }
