--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -19,6 +19,11 @@ body {
   margin: 0;
 }
 
+*:focus {
+  outline: 3px solid dodgerblue;
+  outline-offset: 3px;
+}
+
 .container {
   margin: 0 auto;
   max-width: 1200px;
