--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,74 +1,62 @@
-.editor {
-  form {
-    flex-grow: 1;
-  }
+.editor-wrapper {
+  padding: 1rem;
+  height: 300px;
+  overflow-y: scroll;
+  border: 1px solid lightgray;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
 
-  input {
-    width: 100%;
-    border: none;
-    padding: none;
-    font-size: 1rem;
+.cue--focus {
+  .cue-select-button {
+    background-color: #111;
+    color: white;
+    border-color: black;
   }
+}
 
-  *:focus {
-    outline: 3px solid dodgerblue;
-    outline-offset: 3px;
-  }
+.button {
+  background: transparent;
+  border: 1px solid lightgray;
+  padding: 0.25rem 0.5rem;
+  cursor: pointer;
+}
 
-  button {
-    background: transparent;
-    border: 1px solid lightgray;
-    padding: 0.25rem 0.5rem;
-    cursor: pointer;
-  }
+.cue-pause-button {
+  display: none;
+}
 
-  .transcript-wrapper {
-    padding: 1rem;
-    height: 300px;
-    overflow-y: scroll;
-    border: 1px solid lightgray;
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  }
+.cue-play-button::after {
+  content: "▶";
+}
 
-  .cue--focus {
-    .cue-select-button {
-      background-color: #111;
-      color: white;
-      border-color: black;
-    }
+.is-playing {
+  .cue-play-button::after {
+    content: "⏸";
+    /* display: none; */
   }
 
   .cue-pause-button {
     display: none;
   }
+}
 
-  .cue-play-button::after {
-    content: "▶";
-  }
+.cue {
+  margin-block-end: 1rem;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 0.25em;
+}
 
-  .is-playing {
-    .cue-play-button::after {
-      content: "⏸";
-      /* display: none; */
-    }
+.cue-text {
+  flex-grow: 1;
+  resize: none;
+  padding: 0.25em 0.5em;
+  border: none;
 
-    .cue-pause-button {
-      display: none;
-    }
-  }
-
-  .cue {
-    margin-block-end: 1rem;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    gap: 0.25em;
-  }
-  .cue-average-probability:not(:empty) {
-    font-size: 0.75em;
-    background-color: #111;
-    padding: 0.25em 0.5em;
-    border-radius: 5px;
-    color: white;
+  &:focus-within {
+    box-shadow:
+      inset 0 0 3px rgba(0, 0, 0, 0.3),
+      0 0 2px 0 rgba(0, 0, 0, 0.25);
   }
 }
