--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,10 +1,10 @@
-.editor-wrapper {
+/* .editor-wrapper {
   padding: 1rem;
   height: 300px;
   overflow-y: scroll;
   border: 1px solid lightgray;
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-}
+} */
 
 .cue--focus {
   .cue-select-button {
