--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -99,7 +99,7 @@ nav {
 
 /* Editor page styles */
 
-.media-wrapper {
+.media-wrapper:not(:empty) {
   display: grid;
   grid-template-columns: 250px 1fr;
   gap: 1rem;
