--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -173,3 +173,11 @@ nav {
       0 0 2px 0 rgba(0, 0, 0, 0.25);
   }
 }
+
+.editor-wrapper .end-time {
+  display: none;
+}
+
+.editor-wrapper[data-show-end] .end-time {
+  display: inline;
+}
