--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -101,7 +101,7 @@ nav {
 
 .media-wrapper:not(:empty) {
   display: grid;
-  grid-template-columns: 250px 1fr;
+  grid-template-columns: auto 1fr;
   gap: 1rem;
   margin-block-end: 1rem;
   background-color: whitesmoke;
