Add show low probability functionality

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -26,7 +26,7 @@ body {
 
 .container {
   margin: 0 auto;
-  max-width: 1200px;
+  width: 1200px;
   padding: 0 1em;
 }
 
@@ -123,7 +123,8 @@ nav {
   gap: 1em;
 }
 
-.cue[data-min-prob*="0.1"] 
+.show-problems {
+  .cue[data-min-prob*="0.1"] 
 , .cue[data-min-prob*="0.2"] 
 , .cue[data-min-prob*="0.3"] 
 , .cue[data-min-prob*="0.4"] 
@@ -132,19 +133,12 @@ nav {
 /* , .cue[data-min-prob*="0.7"]  */
 /* , .cue[data-min-prob*="0.8"]  */
 /* , .cue[data-min-prob*="0.9"]  */ {
-  &::after {
-    /* content: "⚠️"; */
-    display: block;
-    background-image: url("../media/images/warn-icon.jpg");
-    width: 12px;
-    height: 12px;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: contain;
+    &::after {
+      content: "⚠️";
+    }
   }
-}
 
-.cue[data-avg-prob*="0.1"] 
+  .cue[data-avg-prob*="0.1"] 
 , .cue[data-avg-prob*="0.2"] 
 , .cue[data-avg-prob*="0.3"] 
 , .cue[data-avg-prob*="0.4"] 
@@ -153,15 +147,9 @@ nav {
 , .cue[data-avg-prob*="0.7"] 
 /* , .cue[data-avg-prob*="0.8"]  */
 /* , .cue[data-avg-prob*="0.9"]  */ {
-  &::after {
-    /* content: "⚠️"; */
-    display: block;
-    content: url("../media/images/warn-icon.jpg");
-    width: 12px;
-    height: 12px;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: contain;
+    &::after {
+      content: "⚠️";
+    }
   }
 }
 
