--- a/docs/css/test.css
+++ b/docs/css/test.css
@@ -1,9 +1,22 @@
 .grid {
   display: grid;
-  /* grid-template-columns: 400px 1fr; */
+  grid-template-columns: 400px 1fr;
   grid-template-rows: auto auto;
   gap: 2rem;
   margin-block-start: 2rem;
+
+  .row--media {
+    grid-column: 1 / 2;
+
+    video {
+      grid-template-columns: 1 / 2;
+    }
+  }
+
+  .row--transcript {
+    grid-row: 2 / 3;
+    grid-column: 1 / 3;
+  }
 }
 
 .audio-captions {
