--- a/docs/test/test.css
+++ b/docs/test/test.css
@@ -19,6 +19,11 @@
   }
 }
 
+.sticky {
+  position: sticky;
+  top: 2rem;
+}
+
 .audio-captions {
   box-shadow:
     inset 0 0 6px rgba(0, 0, 0, 0.3),
@@ -32,7 +37,6 @@
     line-height 0.3s ease;
 
   .cue--current {
-    font-size: x-large;
-    line-height: 1.1;
+    font-weight: bold;
   }
 }
