--- a/docs/test/test.css
+++ b/docs/test/test.css
@@ -1,27 +1,24 @@
-.grid {
+.main-grid {
+  margin-block-start: 1rem;
   display: grid;
-  grid-template-columns: 400px 1fr;
-  grid-template-rows: auto auto;
-  gap: 2rem;
-  margin-block-start: 2rem;
+  grid-template-columns: auto;
+  gap: 1rem;
 
-  .row--media {
-    grid-column: 1 / 2;
-
-    video {
-      grid-template-columns: 1 / 2;
-    }
-  }
-
-  .row--transcript {
-    grid-row: 2 / 3;
-    grid-column: 1 / 3;
+  .row {
+    /* ... */
   }
 }
 
-.sticky {
-  position: sticky;
-  top: 2rem;
+.row--media {
+  grid-template-columns: auto 1fr;
+}
+
+.row--controls {
+  /* ... */
+}
+
+.row--transcript {
+  /* ... */
 }
 
 .audio-captions {
@@ -39,4 +36,12 @@
   .cue--current {
     font-weight: bold;
   }
+}
+
+a[download] {
+  text-decoration: none;
+  border: 1px solid gray;
+  color: currentColor;
+  display: inline-block;
+  padding: 0.5em 1em;
 }
